# automatic-garbanzo

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  DEMO.md  LESSONS.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py  0002_unique_contracts_per_rule.py
deploy/: PRODUCTION.md  README.md  RESUME.md  cloud-init.yaml  main.bicep
ingestion/: CLAUDE.md  chunker.py  cli.py  embedder.py  extractor.py  hashing.py  jobs.py  parser.py  pipeline.py  snapshots.py  watcher.py  worker.py  writer.py
mcp_servers/: CLAUDE.md
mcp_servers/query/: server.py  store.py
rules/: CLAUDE.md  folder_map.yaml  registry.py
rules/generic_contract/: __init__.py  v1_0_0.py
rules/lease/: __init__.py  v1_0_0.py
rules/saas_contract/: __init__.py  v3_1_0.py  v3_2_0.py  v3_3_0.py
rules/services_contract/: __init__.py  v1_0_0.py
shared/: config.py  db.py  healthcheck.py  healthcheck_cli.py  identity.py  logging.py  models.py  urls.py
tests/: test_chunker.py  test_describe_schema.py  test_extraction_validation.py  test_healthcheck.py  test_logging.py  test_oauth_wiring.py  test_rules.py  test_select_projection.py  test_snapshots.py  test_urls.py
